RESOLVED FIXED308674
Fix SafeCPP issues for Font-related files at Source/WebCore/platform/graphics/cocoa
https://bugs.webkit.org/show_bug.cgi?id=308674
Summary Fix SafeCPP issues for Font-related files at Source/WebCore/platform/graphics...
Vitor Roriz
Reported 2026-02-25 14:55:56 PST
Fix SafeCPP issues for Font-related files at Source/WebCore/platform/graphics/cocoa
Attachments
Vitor Roriz
Comment 1 2026-02-25 14:58:20 PST
Radar WebKit Bug Importer
Comment 2 2026-02-25 14:58:26 PST
EWS
Comment 3 2026-02-26 16:41:33 PST
Committed 308312@main (def6645cc9b3): <https://commits.webkit.org/308312@main> Reviewed commits have been landed. Closing PR #59456 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.