Fix SafeCPP issues for Font-related files at Source/WebCore/platform/graphics/cocoa https://bugs.webkit.org/show_bug.cgi?id=308674 rdar://problem/171207441

Reviewed by Sammy Gill.

* Source/WebCore/SaferCPPExpectations/UnretainedCallArgsCheckerExpectations:
* Source/WebCore/SaferCPPExpectations/UnretainedLocalVarsCheckerExpectations:
* Source/WebCore/platform/graphics/cocoa/FontCacheCoreText.cpp:
(WebCore::fontDescriptorWithFamilySpecialCase):
(WebCore::FontCache::systemFallbackForCharacterCluster):
* Source/WebCore/platform/graphics/cocoa/FontPlatformDataCocoa.mm:
(WebCore::FontPlatformData::variationAxes const):
* Source/WebCore/platform/graphics/cocoa/SystemFontDatabaseCoreText.cpp:
(WebCore::SystemFontDatabaseCoreText::createTextStyleFont):
(WebCore::SystemFontDatabase::platformSystemFontShorthandInfo):

Canonical link: https://commits.webkit.org/308312@main